<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.chartfragment.ChartFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_spinners"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/currency_button_group">

        <Spinner
            android:id="@+id/base_rate_spinner"
            android:layout_height="@dimen/spinner_height"
            android:layout_width="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/target_rate_spinner"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="@dimen/margin_padding_size_small"
            android:layout_marginStart="@dimen/margin_padding_size_medium"
            android:layout_marginEnd="@dimen/margin_padding_size_small"
            android:layout_marginBottom="@dimen/margin_padding_size_medium"
            android:textSize="@dimen/text_size_large"
            android:gravity="center"
            android:textAlignment="center"
            android:spinnerMode="dropdown"
            android:entries="@array/rates"/>

        <Spinner
            android:id="@+id/target_rate_spinner"
            android:layout_height="@dimen/spinner_height"
            android:layout_width="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/base_rate_spinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="@dimen/margin_padding_size_small"
            android:layout_marginStart="@dimen/margin_padding_size_small"
            android:layout_marginEnd="@dimen/margin_padding_size_small"
            android:layout_marginBottom="@dimen/margin_padding_size_medium"
            android:textSize="@dimen/text_size_large"
            android:gravity="center"
            android:textAlignment="center"
            android:spinnerMode="dropdown"
            android:entries="@array/rates" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/currency_button_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraint_spinners"
        android:layout_marginStart="@dimen/margin_padding_size_medium"
        android:layout_marginTop="@dimen/margin_padding_size_smaller"
        android:layout_marginEnd="@dimen/margin_padding_size_small"
        android:layout_marginBottom="@dimen/margin_padding_size_medium"
        card_view:checkedButton="@id/currency_togglebutton_one_week_selector"
        card_view:selectionRequired="true"
        card_view:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/currency_togglebutton_one_week_selector"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/one_week_period_button_text"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_smaller"
            card_view:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/currency_togglebutton_one_month_selector"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/one_month_period_button_text"
            android:textAlignment="center"
            android:textSize="14sp"
            card_view:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/currency_togglebutton_six_months_selector"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/six_months_period_button_text"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_smaller"
            card_view:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/currency_togglebutton_one_year_selector"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/one_year_period_button_text"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_smaller"
            card_view:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/currency_togglebutton_five_years_selector"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/five_years_period_button_text"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_smaller"
            card_view:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/currency_togglebutton_custom_period_selector"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            card_view:icon="@drawable/ic_calendar"
            card_view:iconGravity="textStart"
            card_view:iconPadding="0dp"
            card_view:strokeWidth="1dp" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_chart"
        android:layout_width="0dp"
        android:layout_height="300dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currency_button_group"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" >

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/currency_chart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin_padding_size_medium"
            android:layout_marginEnd="@dimen/margin_padding_size_small"
            android:layout_marginTop="@dimen/margin_padding_size_medium"
            android:layout_marginBottom="@dimen/margin_padding_size_medium"
            android:focusableInTouchMode="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
